src/test/deca/syntax/invalid/created/only_one_value_type/only_idents.deca
// Description :
// Fichier contenant uniquement des identificateurs
//
// Resultats :
// Lexer -> OK 
// Parser -> Ligne 8 : no viable alternative at input '

uHcWaSdh3uiOPGvdF$HS
YOM0AIkiKC0QRKVcll
DqaCplgfWMXoo8NQ73OP	V4B
PSt_
j6$XgPj9gvFhc2bzgcztB7lCSrRXq p0UWw$zuL8	Yk29v2c9vEhFCBYTdQNIv5qiUlL	dERJ64R_Lh1PlUBd26Lno2j3f$R9dILwpwz_lP	_XB
dsSPuiVpmdBWdJL8M8kXddcGHaT1IUOYq nK14IE0KRnJ44wi$qxnQ_87NehNzDw
FzHAhwA0XA1NEectf5tK4TyI iXWeaNAgAw6pH4qTydgXXz6jQsRK5pvmrNTD7N	yYSiemP0wQmuRgnS$x$3Dcu7QZj$o6Zu$tz
JArOjPTNJpg32YgMO9gqAgcYty9zSFGS qeoEWgQcc UWKxH5t599RMY93plWwP9 HbY_Ol5mbLOjFSIpWDQiPYqIY
hvMSbPtVTBBP7gMYqSxCkdnqQIN
Z6WGSz04fVJrwxKWLFLOqEGJu
A
eHWusLwR3F9QhNRai
feebbxyteIOF k7RxWiGXHXMfW0mIgHBFyxGjr tfWzpRb SgKm
kFkeZBtJzlyaSe95q_Q4	eB4FBfc$jdB5MZmmO4jbjgH
uf$i
Z3nEer8cD7UeaJgkJ48i2pQKTCLmZCQ49VzcRWVo
t$pj85O2N_jYTA5YSGBkTyhE7huV
AmCL$f sJxRALBLYhGUEQLZfR_wXiehi	ZqgEO6Vj79VNowAAd bV7v4oEE8c_sXE7XIPG1egGrUrT15	YLkNxkXM$s8zlcEsTLRpQCL5V8E
IH8g$D6rnieV	MGkfMhV4J5lss_zef4
Btn0QTlp2qvR4J2ahp7D3EvwhhsghMg
bt5DpJWnSS9LZ2HKsvjj
g92eDkbnQh99ZAwS_Cwu3lVO8ndD
TIOQlDWowGWQARLyvHSGzA2xIolqvTxrI
OtKicJrkPjLCeCsPX8zKalZuB5MbL	aDT6Qebl
H8O_dY
fG_is9Smt5_z
m_Z5E4wmSc_glFXC1NGMkzYVropX6zmSgNJm
N07XnejpWkE_XFph5VVXk	D$6Ofk9spzd2bl_aIoQzfL wNaRT1ky38uFdv6tCwjiuQ4sju SlUuXIGSXZlHGK	h35Rr0aqYwysOU2j$PZZG9p8$M4S9ItHDtP_
Ct1WIcuyUP_4UtBY	g_f5p$2t xW6
PFr7FFAOYs
EfvgUQ6$2oAL011UnMu7UiQGWKs
wB94rgFNnaO8oCEHxErXcP	TFSMyRXVEVU_W5w_LlquMTP4zaSi4u t3W8irfX_g_XTwwOd1fUCx	QDvTiKgq6eHwJMf_TGjVEqKqwX4cxJyQYq
yPSh hAVRb$QAHxkH1yy5Q28c6_qEClC1J30AFCz2m4KN	v6tYSyMbEGn5$FfQ9aCt5B6fV1	syxQIl6VpCseT k5PJETC2hrAhCmBkRIoNyRp4mXi6Zikqu8wtr	jj1WUoAhWMTv1Rz9Kh9OEcc	CaXATuLpaJ
vq1F6iNcK52XBsh8nGQdc
C5LiwSSR3eTUI9DVQM7Px5L25
mLZiKGxaTueOHp1wt0osk	cG6LlPee5CIYCWZrvZGwFCtLkgc0ONx$9 p4O6aAmE Ks74zee4oaYm
V66ZypxAl4d
eU$3kc8_Nsn9H
Wli5ny6mR847jD$2z7r
Xpdqo0k1oryNkKhSUF	mcFARutFdCtksFGZoVAXLcb
